# flunk

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  STATUS.md  flunk-plan.md  pyproject.toml
docs/: CATALOG.md  PRODUCT.md  V1_SPEC.md
docs/superpowers/plans/: 2026-05-29-llm-judge-pass.md  2026-05-29-static-judgment-fixes.md
docs/superpowers/specs/: 2026-05-29-hybrid-judgment-pass-design.md
src/flunk/: __init__.py  agent.py  classify.py  cli.py  decisions.py  demote.py  findings.py  judge.py  judge_anthropic.py  profile.py  rank.py
src/flunk/catalog/: __init__.py  env_read_filter.py  metadata.py
src/flunk/catalog/patterns/: alembic.yml  async_client_in_fn.yml  bare_except_security.yml  humanize.yml  inline_import.yml  pydantic_settings.yml  secure_headers.yml  sql_injection.yml  sqlite3_thread.yml  tenacity.yml
src/flunk/detectors/: __init__.py  _walk.py  async_client_severity.py  csrf_middleware.py  duplicate_retry.py  f811_suppression.py  inline_import.py  module_singleton.py  requirements_vs_pyproject.py
src/flunk/runners/: __init__.py  jscpd.py  semgrep.py
tests/: conftest.py  test_agent.py  test_async_client_severity.py  test_catalog.py  test_classify.py  test_cli_judge.py  test_decisions.py  test_demote.py  test_duplicate_retry.py  test_env_read_filter.py  test_findings_judge.py  test_inline_import.py  test_jscpd.py  test_judge.py  test_judge_anthropic.py  test_profile.py  test_rank.py  test_security_rules.py  test_walk.py
