[project]
name = "flunk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Scott Gentzen", email = "gentzen@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "rich>=15.0.0",
    "typer>=0.25.1",
]

[project.scripts]
flunk = "flunk:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
